# fidelityfetch

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  clippy.toml  dist-workspace.toml  dist.toml  install.sh  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  build-setup.yml  dependabot_changelog.yml  release.yml  test_release.yml
package/: fife.service
scripts/: mod.just  package.bash
src/: async_util.rs  config.rs  dir_entry.rs  icon.rs  main.rs  mdns.rs  router.rs  serve.rs  setup.rs  test_prelude.rs  util.rs
src/config/: logging.rs
src/icon/: svgs.rs
src/serve/: dir.rs  html.rs  range_req.rs
src/serve/dir/: zip.rs
wix/: main.wxs
yocto/example-meta-rust-bin/recipes-fidelityfetch/fidelityfetch/: fidelityfetch_0.5.0.bb
yocto/example-meta-rust-bin/recipes-fidelityfetch/fidelityfetch/files/: fife
