[package]
name = "fidelityfetch"
description = "Seamlessly setup a webserver to serve files recursively from a specified path"
license = "MIT"
authors = ["Marc Beck König <mbkj@tutamail.com>"]
version = "0.3.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/CramBL/fidelityfetch"
repository = "https://github.com/CramBL/fidelityfetch"
keywords = ["file-transfer", "command-line"]

exclude = [".github", "scripts"]

[package.metadata.wix]
upgrade-guid = "EB76ABBF-BC76-43E4-A40B-4B076E6BF56C"
path-guid = "2DDDCA1B-E47B-4A39-9B8B-93D176E9CEFC"
license = false
eula = false

[[bin]]
name = "fife"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive", "env"] }
clap_complete = "4.5.6"
axum = "0.7.5"
mime_guess = "2.0.5"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
local-ip-address = "0.6.1"
mdns-sd = "0.11.1"
chrono = "0.4.38"
tokio-util = { version = "0.7.11", features = ["io"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
futures-util = "0.3.30"
percent-encoding = "2.3.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
testresult = "0.4.0"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Which actions to run on pull requests
pr-run-mode = "upload"
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-musl",
    "aarch64-pc-windows-msvc",
    "arm-unknown-linux-musleabihf",
    "armv7-unknown-linux-musleabihf",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[dist.dependencies.apt]
# aarch64-unknown-linux-musl
gcc-aarch64-linux-gnu = { version = '11.2.0-1ubuntu1', targets = [
    "aarch64-unknown-linux-musl",
], stage = [
    "build",
] }
libc6-dev-i386 = { version = '*', targets = [
    "aarch64-unknown-linux-musl",
], stage = [
    "build",
] }
# armv7-unknown-linux-musleabihf && arm-unknown-linux-musleabihf
gcc-arm-linux-gnueabihf = { version = '*', targets = [
    "armv7-unknown-linux-musleabihf",
    "arm-unknown-linux-musleabihf",
], stage = [
    "build",
] }
