[package]
name = "fidelityfetch"
description = "Seamlessly setup a webserver to serve files recursively from a specified path"
license = "MIT"
authors = ["Marc Beck König <mbkj@tutamail.com>"]
version = "0.3.2"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/CramBL/fidelityfetch"
repository = "https://github.com/CramBL/fidelityfetch"
keywords = ["file-transfer", "command-line"]

exclude = [".github", "scripts"]

[package.metadata.wix]
upgrade-guid = "EB76ABBF-BC76-43E4-A40B-4B076E6BF56C"
path-guid = "2DDDCA1B-E47B-4A39-9B8B-93D176E9CEFC"
license = false
eula = false

[[bin]]
name = "fife"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
axum = "0.7"
mime_guess = "2.0.5"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
local-ip-address = "0.6"
mdns-sd = "0.11"
chrono = "0.4"
tokio-util = { version = "0.7.12", features = ["io"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
futures-util = "0.3"
percent-encoding = "2.3"

[dev-dependencies]
pretty_assertions = "1.4"
temp-dir = "0.1"
testresult = "0.4"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
